--- a/build.gradle
+++ b/build.gradle
@@ -10,11 +10,14 @@ targetCompatibility = 11
 
 repositories {
     mavenCentral()
+    maven { url 'https://repo.gradle.org/gradle/libs-releases' }
 }
 
 dependencies {
-    implementation 'org.freemarker:freemarker:2.3.28'
+    implementation 'org.freemarker:freemarker:2.3.28', "org.gradle:gradle-tooling-api:5.4.1"
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    
+    runtimeOnly 'org.slf4j:slf4j-simple:1.7.10'
 }
 
 intellij {
