--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,7 @@ repositories {
 }
 
 dependencies {
+    compile files("/libs/testmotor-1.0.jar")
     implementation 'org.freemarker:freemarker:2.3.28', "org.gradle:gradle-tooling-api:5.4.1"
     testCompile group: 'junit', name: 'junit', version: '4.12'
     
